-
Type:
Bug
-
Resolution: Fixed
-
Priority:
P3
-
Affects Version/s: 14
-
Component/s: hotspot
-
b24
| Issue | Fix Version | Assignee | Priority | Status | Resolution | Resolved In Build |
|---|---|---|---|---|---|---|
| JDK-8293407 | 11.0.18-oracle | Thomas Schatzl | P3 | Resolved | Fixed | b01 |
| JDK-8280466 | 11.0.15 | Paul Hohensee | P3 | Resolved | Fixed | b01 |
In some recent SPECjbb2015 runs with -XX:+AlwaysPreTouch G1 used only a single thread for pretouching hundreds of GB of Java heap which takes a long time.
Eg.
[0.160s][debug][gc,heap ] Running G1 PreTouch with 1 workers for 420 work units pre-touching 450971566080B.
[136.307s][debug][gc,heap ] Running G1 PreTouch with 1 workers for 6 work units pre-touching 7046430720B.
[140.038s][debug][gc,heap ] Running G1 PreTouch with 1 workers for 6 work units pre-touching 7046430720B.
[144.142s][debug][gc,heap ] Running G1 PreTouch with 1 workers for 1 work units pre-touching 880803840B.
[144.400s][debug][gc,heap ] Running G1 PreTouch with 1 workers for 1 work units pre-touching 880803840B.
[144.867s][debug][gc,heap ] Running G1 PreTouch with 1 workers for 1 work units pre-touching 880803840B.
Fix this regression.
Eg.
[0.160s][debug][gc,heap ] Running G1 PreTouch with 1 workers for 420 work units pre-touching 450971566080B.
[136.307s][debug][gc,heap ] Running G1 PreTouch with 1 workers for 6 work units pre-touching 7046430720B.
[140.038s][debug][gc,heap ] Running G1 PreTouch with 1 workers for 6 work units pre-touching 7046430720B.
[144.142s][debug][gc,heap ] Running G1 PreTouch with 1 workers for 1 work units pre-touching 880803840B.
[144.400s][debug][gc,heap ] Running G1 PreTouch with 1 workers for 1 work units pre-touching 880803840B.
[144.867s][debug][gc,heap ] Running G1 PreTouch with 1 workers for 1 work units pre-touching 880803840B.
Fix this regression.
- backported by
-
JDK-8280466 G1 uses only a single thread for pretouching the java heap
-
- Resolved
-
-
JDK-8293407 G1 uses only a single thread for pretouching the java heap
-
- Resolved
-
- relates to
-
JDK-8252221 Use multiple workers for Parallel GC pre-touching
-
- Resolved
-