8232533: G1 uses only a single thread for pretouching the java heap

Reviewed-by: tschatzl, sjohanss